[package]
name = "sc-rpc-server"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate RPC servers."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.1.6"
jsonrpc-core = "15.1.0"
pubsub = { package = "jsonrpc-pubsub", version = "15.1.0" }
log = "0.4.8"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", path = "../../utils/prometheus", version = "0.9.0"}
serde = "1.0.101"
serde_json = "1.0.41"
sp-runtime = { version = "3.0.0", path = "../../primitives/runtime" }
whitenoise-rpc = {git = "https://github.com/Evanesco-Labs/WhiteNoise-RPC.git",rev = "32947d1"}
libp2p = { version = "0.37.1" }
async-std = { version = "1.9.0", features = ["attributes"] }

[target.'cfg(not(target_os = "unknown"))'.dependencies]
http = { package = "jsonrpc-http-server", version = "15.1.0" }
ipc = { package = "jsonrpc-ipc-server", version = "15.1.0" }
ws = { package = "jsonrpc-ws-server", version = "15.1.0" }
